--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,8 @@
 <%- include('./partials/html-head') %>
 <%- include('./partials/nav') %>
 
-  <h1><%= title %></h1>
-  <a href="/movies/new">Add a Movie!</a>
-  <a href="/movies">Show me all the movies!</a>
+<h1><%- title %> </h1>
+  <a href="/flights">All Flights</a>
+  <a href="/flights/new">New Flights</a>
 
-  <%- include('./partials/footer') %>
+<%- include('./partials/footer') %>
